# goblin-game

./: Cargo.toml  build.rs
assets/levels/: test.level
assets/shaders/: triangle.frag  triangle.vert
src/: camera.rs  collider.rs  components.rs  constants.rs  controller.rs  ecs.rs  entities.rs  entity_manager.rs  input.rs  level.rs  lib.rs  main.rs  mesh.rs  mesh_manager.rs  ray.rs  resources.rs  setup.rs  shader.rs  systems.rs  texture.rs  triangle.rs  utils.rs  vertex.rs
src/components/: camera.rs  camera_followable.rs  collidable.rs  collision.rs  component_array.rs  component_manager.rs  controllable.rs  gravity.rs  mesh.rs  mod.rs  model.rs  rigid_body.rs  texture.rs  transform.rs
src/ecs/: component_vec.rs  mod.rs
src/entities/: entity_manager.rs  mod.rs  signature.rs
src/models/: cube.rs  mod.rs  model.rs  model_manager.rs  plane.rs  triangle.rs
src/plugins/: controller.rs  level.rs  mod.rs  physics.rs  player.rs
src/polygons/: cube.rs  line.rs  mod.rs  plane.rs  polygon_renderer.rs
src/render_gl/: data.rs  mod.rs  program.rs  shader.rs  vectors.rs
src/systems/: controller_system.rs  mod.rs  physics_system.rs  render_system.rs
src/textures/: texture.rs  texture_manager.rs
