[package]
name = "open_gl_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.36.0", features = ["bundled", "static-link"] }
gl = "0.14.0"
rand = "0.8.5"
image = "0.25.1"
nalgebra-glm = "0.3"

[build-dependencies]
walkdir = "2.1"
