[package]
name = "goblin_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.27.0-rc.1", features = ["simd-stable", "parallel", "debug-render-3d"] }
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
